# vtpm-td

./: .gitignore  .gitmodules  Cargo.toml  Dockerfile  README.md  license.md
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: codeql.yml  deny.yml  format.yml  integration.yml  main.yml  oss-fuzz.yml  scorecard.yml  unittest.yml
config/: intel_root_sbx.der  manifest_info.json  metadata.json  shim_layout.json
doc/: integration-test.md  verify-vtpm-features.md
sh_script/: build.sh  docker.sh  ek_cert.sh  fuzzing.sh  integration_test.py  launch_user_td.sh  launch_vtpm_td.sh  pre-build.sh  pyproject.toml  pytest.ini  test_vtpm.py  test_vtpm_command.py  unit_test.sh  utils.py  vtpmtool.py
sh_script/conf/: pyproject.toml
sh_script/secure_boot/: key_gen.sh  secure_boot.py  var_enroll.py
src/attestation/: Cargo.toml  build.rs
src/attestation/src/: attest.rs  binding.rs  ghci.rs  lib.rs  null.rs  root_ca.rs
src/crypto/: Cargo.toml
src/crypto/fuzz/: Cargo.toml
src/crypto/fuzz/fuzz_targets/: afl_certchain.rs  certchain.rs
src/crypto/fuzz/seeds/certchain/: cert_chain
src/crypto/src/: ek_cert.rs  lib.rs  resolve.rs  td_report.rs  x509.rs
src/eventlog/: Cargo.toml
src/eventlog/src/: eventlog.rs  lib.rs
src/global/: Cargo.toml
src/global/src/: lib.rs  spdm.rs  tpm.rs
src/protocol/: Cargo.toml
src/protocol/src/: lib.rs
src/protocol/src/report_status/: command.rs  mod.rs  response.rs
src/protocol/src/service/: command.rs  mod.rs  response.rs
src/protocol/src/wait_for_request/: command.rs  mod.rs  response.rs
src/spdm/: Cargo.toml
src/spdm/src/: crypto_callback.rs  lib.rs  vtpm_io_transport.rs  vtpm_transport_encap.rs
src/tdtunnel/: Cargo.toml
src/tdtunnel/src/: interrupt.rs  lib.rs  td_tunnel.rs
src/tdx_attest/: Cargo.toml
src/tdx_attest/src/: ghci.rs  lib.rs  td_quote.rs
src/tpm/: Cargo.toml  build.rs
src/tpm/src/: cty.rs  lib.rs  rtc.rs  std_lib.rs  tpm2_ca_cert.rs  tpm2_digests.rs  tpm2_pcr.rs  tpm2_provision.rs  tpm2_sys.rs
src/tpm/src/tpm2_cmd_rsp/: command.rs  getcaps.rs  mod.rs  response.rs  shutdown.rs  startup.rs
src/vtpmtd/: Cargo.toml
src/vtpmtd/src/: main.rs
src/vtpmtd/src/vtpm/: mod.rs  spdm_cbs.rs  spdm_connection.rs  spdm_server.rs
