[workspace]
resolver = "2"

default-members = [
    "src/vtpmtd",
]
members = [
    "src/attestation",
    "src/eventlog",
    "src/global",
    "src/crypto",
    "src/protocol",
    "src/spdm",
    "src/tdtunnel",
    "src/tpm",
    "src/vtpmtd",
]

exclude = [
    "deps/td-shim",
    "deps/spdm-rs",
    "deps/ring",
    "deps/webpki",
]

# the profile used for `cargo build`
[profile.dev]
panic = "abort" # disable stack unwinding on panic

# the profile used for `cargo build --release`
[profile.release]
panic = "abort"    # disable stack unwinding on panic
lto = true         # Link-time optimization

[patch.crates-io]
ring = { path = "deps/spdm-rs/external/ring" }
webpki = { path = "deps/spdm-rs/external/webpki" }
