[package]
name = "attestation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crypto = { path = "../crypto" }
der = { version = "0.5.1", features = ["oid", "alloc", "derive"] }
spin = "0.9.2"
tdx-tdcall = { path = "../../deps/td-shim/tdx-tdcall"}
td-payload = { path = "../../deps/td-shim/td-payload", features = ["tdx"] }

[features]
default = ["remote-attestation"]
remote-attestation = []
test = []
