[package]
name = "crypto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = { version="1", default-features=false }
der = {version = "0.5.1", features = ["oid", "alloc", "derive"]}
global = { path = "../global" }
log = "0.4.13"
ring = { version = "0.16.20" }
spdmlib = { path = "../../deps/rust-spdm/spdmlib", default-features = false, features = ["spdm-ring", "mut-auth"]}
tdx-tdcall = { path = "../../deps/td-shim/tdx-tdcall" }
zerocopy = "0.6.1"
