[package]
name = "crypto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = { version="1", default-features=false }
der = {version = "0.7.9", features = ["oid", "alloc", "derive"]}
global = { path = "../global" }
log = "0.4.13"
ring = { version = "0.17.6" }
spdmlib = { path = "../../deps/spdm-rs/spdmlib", default-features = false, features = ["spdm-ring", "mut-auth", "is_sync"]}
tdx-tdcall = { path = "../../deps/td-shim/tdx-tdcall" }
zerocopy = { version = "0.7.31", features = ["derive"] }
