[package]
name = "protocol"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = { version = "1.0", default-features = false }
global = { path = "../global" }
log = "0.4.13"
td-shim-interface =  { path = "../../deps/td-shim/td-shim-interface" }
