[package]
name = "spdm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
global = { path = "../global" }
log = "0.4.13"
paste = "1.0"

ring = { version = "0.16.20" }
spin = "0.9.2"
x86 = "0.47.0"
x86_64 = "0.14.9"

codec = { path = "../../deps/rust-spdm/codec" }
protocol = { path = "../protocol" }
tdtunnel = { path = "../tdtunnel" }
spdmlib = { path = "../../deps/rust-spdm/spdmlib", default-features = false, features = ["spdm-ring", "mut-auth"]}
td-exception = { path = "../../deps/td-shim/td-exception", features = ["tdx"]}
tdx-tdcall = { path = "../../deps/td-shim/tdx-tdcall" }
td-payload = { path = "../../deps/td-shim/td-payload", features = ["tdx"] }