[package]
name = "tdtunnel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
global = { path = "../global" }
log = "0.4.13"
paste = "1.0"
x86 = "0.47.0"
x86_64 = "0.14.9"

protocol = { path = "../protocol" }
tdx-tdcall = { path = "../../deps/td-shim/tdx-tdcall" }
td-exception = { path = "../../deps/td-shim/td-exception", features = ["tdx"]}
td-payload = { path = "../../deps/td-shim/td-payload", features = ["tdx"] }