[package]
name = "tpm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
attestation = { path = "../attestation", default-features = false }
global = { path = "../global" }
log = "0.4.13"
rust-tpm-20-ref = { path = "../../deps/rust-tpm-20-ref" }
spin = "0.9.2"
x86_64 = "0.14"
time = { version = "0.3", default-features = false }

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]
